@@ -11038,6 +11038,18 @@ argument_list|)
 decl_stmt|;
 name|r
 operator|.
+name|checkRow
+argument_list|(
+name|scan
+operator|.
+name|getStartRow
+argument_list|()
+argument_list|,
+literal|"Scan"
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
 name|prepareScanner
 argument_list|(
 name|scan
