@@ -18774,6 +18774,140 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testHolesInMeta
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|method
+init|=
+literal|"testHolesInMeta"
+decl_stmt|;
+name|byte
+index|[]
+name|tableName
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|method
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|family
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"family"
+argument_list|)
+decl_stmt|;
+name|initHRegion
+argument_list|(
+name|tableName
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"x"
+argument_list|)
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"z"
+argument_list|)
+argument_list|,
+name|method
+argument_list|,
+name|HBaseConfiguration
+operator|.
+name|create
+argument_list|()
+argument_list|,
+name|family
+argument_list|)
+expr_stmt|;
+name|byte
+index|[]
+name|rowNotServed
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"a"
+argument_list|)
+decl_stmt|;
+name|Get
+name|g
+init|=
+operator|new
+name|Get
+argument_list|(
+name|rowNotServed
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|region
+operator|.
+name|get
+argument_list|(
+name|g
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|WrongRegionException
+name|x
+parameter_list|)
+block|{
+comment|// OK
+block|}
+name|byte
+index|[]
+name|row
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"y"
+argument_list|)
+decl_stmt|;
+name|g
+operator|=
+operator|new
+name|Get
+argument_list|(
+name|row
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|get
+argument_list|(
+name|g
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testIndexesScanWithOneDeletedRow
 parameter_list|()
 throws|throws
@@ -21051,6 +21185,52 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|initHRegion
+argument_list|(
+name|tableName
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+name|callingMethod
+argument_list|,
+name|conf
+argument_list|,
+name|families
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+name|void
+name|initHRegion
+parameter_list|(
+name|byte
+index|[]
+name|tableName
+parameter_list|,
+name|byte
+index|[]
+name|startKey
+parameter_list|,
+name|byte
+index|[]
+name|stopKey
+parameter_list|,
+name|String
+name|callingMethod
+parameter_list|,
+name|Configuration
+name|conf
+parameter_list|,
+name|byte
+index|[]
+modifier|...
+name|families
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|HTableDescriptor
 name|htd
 init|=
@@ -21092,9 +21272,9 @@ operator|.
 name|getName
 argument_list|()
 argument_list|,
-literal|null
+name|startKey
 argument_list|,
-literal|null
+name|stopKey
 argument_list|,
 literal|false
 argument_list|)
