@@ -330,6 +330,7 @@ Release 0.92.0 - Unreleased
    HBASE-4496  HFile V2 does not honor setCacheBlocks when scanning (Lars and Mikhail)
    HBASE-4531  hbase-4454 failsafe broke mvn site; back it out or fix
                (Akash Ashok)
+   HBASE-4334  HRegion.get never validates row (Lars Hofhansl)
 
   TESTS
    HBASE-4450  test for number of blocks read: to serve as baseline for expected
